# Steno

./: .gitignore  LICENSE  README.en_US.md  README.md  canvas.html  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quicknote.html  search.html  settings.html  sticky.html  tsconfig.json  uno.config.ts  vite.config.ts  vitest.local.config.mts  zen.html
.github/: PULL_REQUEST_TEMPLATE.md
docs/: 00-execution-plan.md  01-lap-analysis.md  02-oculante-analysis.md  03-qview-analysis.md  04-simp-analysis.md  05-viu-analysis.md  06-imageglass-analysis.md  07-jarkviewer-analysis.md  08-flowvision-analysis.md  docs_requirements_steno-requirements.md  openspec_changes_define-steno-mvp_proposal.md  openspec_changes_define-steno-mvp_specs_steno_spec.md  openspec_changes_define-steno-mvp_tasks.md  project-page.html  quicknote-continuous-paste.html  quicknote-desktop.html  steno-functional-prototype.html  steno-layout-v2.html  steno-layout-v3.html  steno-settings-modal.html
prototype/: product-prototype.html
scripts/: build-macos-dmg.mjs
src/: App.test.ts  App.vue  QuickNote.vue  env.d.ts  main.ts  quicknote.ts  tauriConfig.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  clipboard.rs  commands.rs  db.rs  export.rs  lib.rs  logging.rs  main.rs  models.rs  quicknote.rs  reminder_scheduler.rs  shortcut.rs  sync.rs  todo.rs  tray.rs  window.rs  window_manager.rs  workspace_fs.rs
steno-cross-platform-prototype/: README.md  index.html
(+324 files in other folders)
